--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <header>
     <div><p>Test</p></div>
+    <div><p>Test</p></div>
 </header>
 <section>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad consequuntur eum incidunt ipsam laudantium pariatur quam quos recusandae unde!</p>
