--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <header>
     <div><p>Test</p></div>
     <div><p>Test</p></div>
+    <div><p>Test</p></div>
+    <div><p>Test</p></div>
+    <div><p>Test</p></div>
 </header>
 <section>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad consequuntur eum incidunt ipsam laudantium pariatur quam quos recusandae unde!</p>
