--- a/index.html
+++ b/index.html
@@ -34,5 +34,11 @@
 <footer>
     121
 </footer>
+<section class="miros">
+    <p>555</p>
+    <p>666</p>
+    <p>777</p>
+    <p>888</p>
+</section>
 </body>
 </html>
