--- a/index.html
+++ b/index.html
@@ -33,5 +33,9 @@
     <p>777</p>
     <p>888</p>
 </section>
+    <section class="syn988">
+    <p>9999999</p>
+    <p>8888888</p>
+</section>
 </body>
 </html>
